--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "private": true,
   "ignore": [
     "**/.*",
+    "output",
     "node_modules",
     "bower_components",
     "test",
@@ -23,13 +24,15 @@
     "purescript-unsafe-coerce": "^3.0.0",
     "purescript-symbols": "^3.0.0",
     "purescript-lists": "^4.8.0",
-    "purescript-maps": "^3.3.1",
+    "purescript-maps": "^3.5.0",
     "purescript-console": "^3.0.0",
     "purescript-typelevel-prelude": "^2.2.0",
     "purescript-halogen": "^2.1.0",
     "purescript-dom": "^4.5.0",
     "purescript-monoid": "^3.1.0",
     "purescript-validation": "^3.1.0",
-    "purescript-transformers": "^3.4.0"
+    "purescript-transformers": "^3.4.0",
+    "purescript-affjax": "^4.0.0",
+    "purescript-foldable-traversable": "^3.4.0"
   }
 }
