--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/sabine/purescript-halogen-forms#readme",
   "devDependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
     "pulp": "^11.0.0",
     "purescript": "^0.11.5",
     "purescript-psa": "^0.5.1"
